Bug 877 - acct() wrongly has __nonnull((1)) in glibc 2.3.5
Summary: acct() wrongly has __nonnull((1)) in glibc 2.3.5
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.5
: P2 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc236
  Show dependency treegraph
 
Reported: 2005-04-27 09:48 UTC by Roland McGrath
Modified: 2005-07-19 03:30 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2005-04-27 09:48:35 UTC
In posix/unistd.h, the declaration of acct() has 

    __THROW __nonnull ((1))

However, a NULL argument to acct() is the means of
disabling process accounting.  Therefore this declaration
appears to be incorrect and should be removed.
Comment 1 Sourceware Commits 2005-04-27 09:52:01 UTC
Subject: Bug 877

CVSROOT:	/cvs/glibc
Module name:	libc
Changes by:	roland@sources.redhat.com	2005-04-27 09:49:43

Modified files:
	posix          : unistd.h 

Log message:
	2005-04-27  Roland McGrath  <roland@redhat.com>
	
	[BZ #877]
	* posix/unistd.h: Remove __nonnull from acct decl.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/posix/unistd.h.diff?cvsroot=glibc&r1=1.136&r2=1.137

Comment 2 Sourceware Commits 2005-04-27 09:52:23 UTC
Subject: Bug 877

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-04-27 09:50:09

Modified files:
	posix          : unistd.h 

Log message:
	2005-04-27  Roland McGrath  <roland@redhat.com>
	
	[BZ #877]
	* posix/unistd.h: Remove __nonnull from acct decl.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/posix/unistd.h.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.130.4.2&r2=1.130.4.3

Comment 3 Roland McGrath 2005-07-19 03:30:19 UTC
This fix is now in the 2.3 branch as well as the trunk, and the problem should
be resolved as of the 2.3.6 release.