[BZ #877]

2005-04-27  Roland McGrath  <roland@redhat.com>
	[BZ #877]
	* posix/unistd.h: Remove __nonnull from acct decl.